--- a/FinalProject.Web/Views/Event/Create.cshtml
+++ b/FinalProject.Web/Views/Event/Create.cshtml
@@ -14,7 +14,7 @@
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="">
+        <div class="mt-3">
             <label asp-for="Title" class="form-label">Title</label>
             <input asp-for="Title" class="form-control" />
             <span asp-validation-for="Title" class="text-danger"></span>
@@ -39,9 +39,9 @@
         </div>
 
         <div class="mt-3">
-            <label asp-for="ImageUrl" class="form-label"></label>
-            <input asp-for="ImageUrl" type="url" class="form-control" />
-            <span asp-validation-for="ImageUrl" class="text-danger"></span>
+            <label for="EventImage" class="form-label"></label>
+            <input name="EventImage" type="file" class="form-control" accept="image/*" />
+            @* <span asp-validation-for="ImageUrl" class="text-danger"></span> *@
         </div>
 
         <div class=" mt-3">
