--- a/FinalProject.Web/Views/Event/_CreateReviewModal.cshtml
+++ b/FinalProject.Web/Views/Event/_CreateReviewModal.cshtml
@@ -38,7 +38,13 @@
                     </div>
 
                     <div class="mt-3">
-                        <button type="submit" class="btn btn-green">Create</button>
+                        <form asp-action="Create" asp-controller="Event" method="post">
+                            <!-- Add form inputs here -->
+                            <button type="submit" class="btn btn-green">Create</button>
+                        </form>
+
+                        @* <button type="submit" class="btn btn-green" asp-controller="Event"
+                        method="post">Create</button> *@
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </form>
@@ -46,3 +52,9 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
