create button on review working

--- a/FinalProject.Web/Views/Event/Details.cshtml
+++ b/FinalProject.Web/Views/Event/Details.cshtml
@@ -79,4 +79,10 @@
     <partial name="_Reviews" />
 </div>
 <partial name="_DeleteModal" />
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
+
 @* @await Html.PartialAsync("_CreateReviewModal", new Review { EventId = Model.Id }) *@
