--- a/FinalProject.Web/Views/Event/_CreateReviewModal.cshtml
+++ b/FinalProject.Web/Views/Event/_CreateReviewModal.cshtml
@@ -1,7 +1,6 @@
 @model Review
 
-<div class="modal fade" id="createReviewModal" tabindex="-1" aria-labelledby="createReviewModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="createReviewModal" tabindex="-1" aria-labelledby="createReviewModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -38,13 +37,62 @@
                     </div>
 
                     <div class="mt-3">
-                        <form asp-action="Create" asp-controller="Event" method="post">
-                            <!-- Add form inputs here -->
-                            <button type="submit" class="btn btn-green">Create</button>
-                        </form>
+                        <button type="submit" class="btn btn-green">Create</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
 
-                        @* <button type="submit" class="btn btn-green" asp-controller="Event"
-                        method="post">Create</button> *@
+
+@* @model Review
+
+<div class="modal fade" id="createReviewModal" tabindex="-1" aria-labelledby="createReviewModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createReviewModalLabel">Create Review</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="createReviewForm" method="post" asp-action="ReviewCreate" asp-controller="Event" asp-route-id="ReviewCreate">
+                    <input type="hidden" asp-for="EventId" />
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                    <div class="mb-3">
+                        <label asp-for="Name" class="form-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="On" class="form-label"></label>
+                        <input asp-for="On" type="date" class="form-control" />
+                        <span asp-validation-for="On" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="Comment" class="form-label"></label>
+                        <textarea asp-for="Comment" class="form-control"></textarea>
+                        <span asp-validation-for="Comment" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="Rating" class="form-label"></label>
+                        <input asp-for="Rating" type="number" min="1" max="5" class="form-control" />
+                        <span asp-validation-for="Rating" class="text-danger"></span>
+                    </div>
+
+                    <div class="mt-3">
+                        <button type="submit" class="btn btn-green">Create</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </form>
@@ -57,4 +105,4 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-}
+} *@
