--- a/FinalProject.Web/Views/_ViewImports.cshtml
+++ b/FinalProject.Web/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using FinalProject.Web.Views.Shared.Components
 @using FinalProject.Data.Extensions
 @using FinalProject.Web.Models.CalendarModels
+@using System.Linq
 @addTagHelper *, FinalProject.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
