--- a/FinalProject.Web/wwwroot/css/site.css
+++ b/FinalProject.Web/wwwroot/css/site.css
@@ -264,6 +264,32 @@ footer .container {
 }
 
 /*=====================HOME PAGE======================*/
+/*Upcoming Events section*/
+.upcomingevents {
+  color: #004d2a;
+}
+
+.upcomingevents .card-img-top {
+  object-fit: cover;
+  width: 100%;
+  height: 200px;
+}
+
+.upcomingevents .card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+}
+
+.upcomingevents .card-body {
+  flex-grow: 1;
+}
+
+.upcomingevents .btn {
+  margin-top: auto;
+}
+
 /*what we do section*/
 .square-img {
   width: 100%;
