Registration added to events

--- a/FinalProject.Web/Views/Event/Index.cshtml
+++ b/FinalProject.Web/Views/Event/Index.cshtml
@@ -6,9 +6,9 @@
 <div class="card mb-4 text-center shadow-lg">
     <div class="card-body">
         <h3 class="card-title">Welcome to the Events Page!</h3>
-        <p class="card-text">Discover exciting meet-ups and events for dog enthusiasts. Click the <i
-                class="bi bi-hand-thumbs-up" ></i> button to show you're attending an event. This helps others
-                see how many people are going.</p>
+        <p class="card-text">Discover exciting meet-ups and events for dog enthusiasts.<br>
+            Click the <i class="bi bi-hand-thumbs-up"></i> button to show if you're interested in attending an event or
+            if you've attended before and enjoyed!</p>
         <p class="card-text">Click the <i class="bi bi-info-square"></i> button for more details about the
             event, to view reviews, and to add your own reviews!</p>
         <hr>
