--- a/FinalProject.Web/Views/Event/Details.cshtml
+++ b/FinalProject.Web/Views/Event/Details.cshtml
@@ -74,6 +74,35 @@
     </div>
 </div>
 </div>
+
+<!--Registration section-->
+@if (User.Identity.IsAuthenticated)
+{
+    @if (Model.EventTime > DateTime.Now.AddMinutes(30))
+    {
+        <div class="mt-4">
+            <h4>Register for this Event</h4>
+            <form id="registrationForm" method="post" asp-action="Register" asp-asp-controller="Event">
+                <input type="hidden" name="EventId" value="@Model.Id">
+                <button type="submit" class="btn btn-green">Register</button>
+            </form>
+        </div>
+    }
+    else
+    {
+        <p class="text-muted">Registration is closed for this event.</p>
+    }
+}
+else
+{
+    <p class="text-muted">Please <a asp-asp-controller="User" asp-action="Login">Login</a> to register for this event.</p>
+}
+
+<!-- Display registrationForm Count-->
+<div class="mt-3">
+    <h5>Attendees: @Model?.Registrations?.Count</h5>
+</div>
+
 <!-- Reviews -->
 <div class="card rounded shadow p-4 mt-4">
     <partial name="_Reviews" />
