Changed buttons from primary to green

--- a/FinalProject.Web/Views/User/Login.cshtml
+++ b/FinalProject.Web/Views/User/Login.cshtml
@@ -27,7 +27,7 @@
         </div>
 
         <div class=" mt-3">
-            <input type="submit" value="Login" class="btn btn-primary" />
+            <input type="submit" value="Login" class="btn btn-green" />
             @* <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Cancel</a> *@
             <a class="btn btn-link ms-3" asp-controller="User" asp-action="ForgotPassword">Forgot password?</a>
         </div>
