--- a/FinalProject.Web/Views/Event/Edit.cshtml
+++ b/FinalProject.Web/Views/Event/Edit.cshtml
@@ -28,6 +28,12 @@
         </div>
 
         <div class=" mt-3">
+            <label asp-for="EndTime" class="form-label">End Time</label>
+            <input asp-for="EndTime" type="datetime-local" class="form-control"></input>
+            <span asp-validation-for="EndTime" class="text-danger"></span>
+        </div>
+
+        <div class=" mt-3">
             <label asp-for="Location" class="form-label">Location</label>
             <input asp-for="Location" class="form-control"></input>
             <span asp-validation-for="Location" class="text-danger"></span>
