--- a/FinalProject.Web/Views/Post/Details.cshtml
+++ b/FinalProject.Web/Views/Post/Details.cshtml
@@ -35,7 +35,7 @@
 
             <!-- Navigation links -->
             <div>
-                @if (User.IsInRole("admin"))
+                @if (User.IsInRole("admin") || User.IsInRole("manager"))
                 {
                     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-secondary">
                         <i class="bi bi-pencil"></i>
