--- a/FinalProject.Web/Views/Event/_DeleteReviewModal.cshtml
+++ b/FinalProject.Web/Views/Event/_DeleteReviewModal.cshtml
@@ -1,6 +1,7 @@
 @model Review
 
-<div class="modal fade" id="deleteReviewModal-@Model.Id" tabindex="-1" aria-labelledby="deleteReviewModalLabel-@Model.Id" aria-hidden="true">
+<div class="modal fade" id="deleteReviewModal-@Model.Id" tabindex="-1"
+    aria-labelledby="deleteReviewModalLabel-@Model.Id" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
