--- a/FinalProject.Web/Views/Event/Create.cshtml
+++ b/FinalProject.Web/Views/Event/Create.cshtml
@@ -1,15 +1,18 @@
 @model Event
 
 <div class="card shadow p-4 mt-5 mx-auto w-75">
-  
+
     <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 icon">
-        <svg class="text-white" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 15V17M6 21H18C19.1046 21 20 20.1046 20 19V13C20 11.8954 19.1046 11 18 11H6C4.89543 11 4 11.8954 4 13V19C4 20.1046 4.89543 21 6 21ZM16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11H16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+        <svg class="text-white" width="28" height="28" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M12 15V17M6 21H18C19.1046 21 20 20.1046 20 19V13C20 11.8954 19.1046 11 18 11H6C4.89543 11 4 11.8954 4 13V19C4 20.1046 4.89543 21 6 21ZM16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11H16Z"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
     </div>
-    
+
     <h3 class="my-3 mx-auto">Create Event</h3>
-    
+
     <form asp-action="Create" method="post">
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -47,17 +50,16 @@
         <div class="mt-3">
             <label for="EventImage" class="form-label"></label>
             <input name="EventImage" type="file" class="form-control" accept="image/*" />
-            @* <span asp-validation-for="ImageUrl" class="text-danger"></span> *@
         </div>
 
         <div class=" mt-3">
             <input type="submit" value="Create" class="btn btn-green" />
-            
+
             <a class="btn btn-link ms-3 cancel-link" asp-controller="Event" asp-action="Index">Cancel</a>
         </div>
-            
+
     </form>
-    
+
 </div>
 
 @section Scripts {
