--- a/FinalProject.Web/Views/Event/Edit.cshtml
+++ b/FinalProject.Web/Views/Event/Edit.cshtml
@@ -2,9 +2,12 @@
 
 <div class="card shadow p-4 mt-5 mx-auto w-75">
 
-     <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 lock-image">
-        <svg class="text-white" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 15V17M6 21H18C19.1046 21 20 20.1046 20 19V13C20 11.8954 19.1046 11 18 11H6C4.89543 11 4 11.8954 4 13V19C4 20.1046 4.89543 21 6 21ZM16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11H16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+    <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 lock-image">
+        <svg class="text-white" width="28" height="28" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M12 15V17M6 21H18C19.1046 21 20 20.1046 20 19V13C20 11.8954 19.1046 11 18 11H6C4.89543 11 4 11.8954 4 13V19C4 20.1046 4.89543 21 6 21ZM16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11H16Z"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
     </div>
 
@@ -60,15 +63,15 @@
 
         <div class=" mt-3">
             <input type="submit" value="Create" class="btn btn-green" />
-            
+
             <a class="btn btn-link ms-3" asp-controller="Event" asp-action="Index">Cancel</a>
         </div>
-            
+
     </form>
 </div>
 
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    } <!-- Include validation scripts -->
+    }
 }
