cleaned up gallery view

--- a/FinalProject.Web/Views/Gallery/Past.cshtml
+++ b/FinalProject.Web/Views/Gallery/Past.cshtml
@@ -5,7 +5,7 @@
     var isAdmin = User.IsInRole("admin");
 }
 
-<!-- woof and wag banner -->
+<!-- woof and wander banner -->
 <img src="~/images/banners/Gallery.svg" class="banner-full-width img-fluid" alt="Gallery">
 <!-- divider for sections-->
 <hr class="section-divider">
