cleaned up home views

--- a/FinalProject.Web/Views/Home/About.cshtml
+++ b/FinalProject.Web/Views/Home/About.cshtml
@@ -1,36 +1,41 @@
 ﻿<div class="about-us">
-    <!-- woof and wag banner -->
+    <!-- woof and wander banner -->
     <img src="~/images/banners/AboutUs.svg" class="banner-full-width img-fluid" alt="About Us banner">
 
     <!-- Divider for sections -->
     <hr class="section-divider">
 
     <!--What we do section-->
-<section class="what-we-do-section container mt-5">
-    <h2 class="text-center mb-4">What We Do</h2>
-    <div class="row justify-content-center">
-        <!--First column - Connecting dogs and people-->
-        <div class="col-md-4 text-center">
-            <img src="~/images/home/wedo/connect.jpg" class="img-fluid square-img mb-3" alt="Conntect dogs and people">
-            <h5>Connect Dogs and People</h5>
-            <p>We bring together dogs and their owners to create strong, happy communities and long-lasting friendships.</p>
+    <section class="what-we-do-section container mt-5">
+        <h2 class="text-center mb-4">What We Do</h2>
+        <div class="row justify-content-center">
+            <!--First column - Connecting dogs and people-->
+            <div class="col-md-4 text-center">
+                <img src="~/images/home/wedo/connect.jpg" class="img-fluid square-img mb-3"
+                    alt="Conntect dogs and people">
+                <h5>Connect Dogs and People</h5>
+                <p>We bring together dogs and their owners to create strong, happy communities and long-lasting
+                    friendships.</p>
+            </div>
+            <!--Second column - Recommendations-->
+            <div class="col-md-4 text-center">
+                <img src="~/images/home/wedo/recommendation.jpg" class="img-fluid square-img mb-3"
+                    alt="Provide recommendations">
+                <h5>Provide Recommendations</h5>
+                <p>Explore top-rated dog-friendly locations, events, products, and services curated for your furry
+                    friend.</p>
+            </div>
+            <!--Third column - Community posts-->
+            <div class="col-md-4 text-center">
+                <img src="~/images/home/wedo/community.jpg" class="img-fluid square-img mb-3"
+                    alt="Community post section">
+                <h5>Community Posts</h5>
+                <p>Join our community to share stories, photos, and experiences with like minded dog lovers.</p>
+            </div>
         </div>
-        <!--Second column - Recommendations-->
-        <div class="col-md-4 text-center">
-            <img src="~/images/home/wedo/recommendation.jpg" class="img-fluid square-img mb-3" alt="Provide recommendations">
-            <h5>Provide Recommendations</h5>
-            <p>Explore top-rated dog-friendly locations, events, products, and services curated for your furry friend.</p>
-        </div>
-        <!--Third column - Community posts-->
-        <div class="col-md-4 text-center">
-            <img src="~/images/home/wedo/community.jpg" class="img-fluid square-img mb-3" alt="Community post section">
-            <h5>Community Posts</h5>
-            <p>Join our community to share stories, photos, and experiences with like minded dog lovers.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<!-- Divider for sections -->
+    <!-- Divider for sections -->
     <hr class="section-divider">
 
     <div class="container mt-5">
@@ -130,7 +135,7 @@
     <div class="text-center mt-5">
         <h2>Reviews</h2>
         <p>Have a read of just some of the reviews left by Woof & Wander members!</p>
-        
+
 
         <div class="row justify-content-center">
             <!-- Card 1 -->
@@ -184,7 +189,8 @@
                             <i class="bi bi-star-fill star-icon"></i>
                         </h5>
                         <i class="bi bi-chat-heart"></i>
-                        <p class="card-text">We have the best time at the German Pointer Breed meet-ups! Lucky has fun!</p>
+                        <p class="card-text">We have the best time at the German Pointer Breed meet-ups! Lucky has fun!
+                        </p>
                         <p class="font-weight-bold review-name"><i class="bi bi-person user-icon"></i><br> Paddy S</p>
                     </div>
                 </div>
