--- a/FinalProject.Web/Views/Home/Breed.cshtml
+++ b/FinalProject.Web/Views/Home/Breed.cshtml
@@ -1,5 +1,5 @@
 <div class="breed-page">
-    <!-- woof and wag banner -->
+    <!-- woof and wander banner -->
     <img src="~/images/banners/Breeds.svg" class="banner-full-width img-fluid" alt="Recommended Dog Breeds banner">
 
     <!-- Breed selection test card at the top -->
@@ -384,7 +384,7 @@
                 </div>
             </div>
 
-             <!--Bulldog-->
+            <!--Bulldog-->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <img src="~/images/breeds/Bulldog.jpg" alt="Bulldog" class="card-img-top breed-image">
@@ -407,9 +407,10 @@
     <!-- Missing breed suggestion section -->
     <div class="text-center mt-5">
         <p class="fs-4"><strong>Don't see the breed you're looking for?</strong></p>
-        <p class="fs-5">We're always looking to expand our list. <br><a asp-controller="Contact" asp-action="Contact" class="btn-link">Contact us</a>
+        <p class="fs-5">We're always looking to expand our list. <br><a asp-controller="Contact" asp-action="Contact"
+                class="btn-link">Contact us</a>
             and let us know so we can add it!</p>
     </div>
 </div>
 <!-- divider for sections-->
-    <hr class="section-divider">
+<hr class="section-divider">
