--- a/FinalProject.Web/Views/Home/Privacy.cshtml
+++ b/FinalProject.Web/Views/Home/Privacy.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="privacy-policy">
-    <!-- woof and wag banner -->
+    <!-- woof and wander banner -->
     <img src="~/images/banners/Privacy.svg" class="banner-full-width img-fluid" alt="Privacy Policy banner">
 
     <!-- divider for sections-->
@@ -113,8 +113,8 @@
                     <div id="contact" class="mb-4">
                         <h4>Contact Us</h4>
                         <p>If you have any questions, concerns, or requests regarding this privacy policy or your
-                            personal information, please contact us at <a
-                                href="mailto:support@woofandwander.com" class="btn-link">support@woofandwander.com</a>.</p>
+                            personal information, please contact us at <a href="mailto:support@woofandwander.com"
+                                class="btn-link">support@woofandwander.com</a>.</p>
                         <p>We are committed to addressing your inquiries promptly and transparently. Thank you for
                             trusting us with your information.</p>
                     </div>
